--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/bootstap.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css">
     <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
@@ -11,22 +11,21 @@
   <body>
     <div class="container">
       <form>
-        <div class="row">
-          <div class="form-check">
-            <label class="form-check-label">
-              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="Small" checked>Small
-            </label>
-          </div>
-          <div class="form-check">
-            <label class="form-check-label">
-              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="Medium">Medium
-          </div>
-          <div class="form-check disabled">
-            <label class="form-check-label">
-                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="Large">Large
-            </label>
-          </div>
+        <div class="form-group">
+          <select class="form-control form-control" id="pizza-size">
+            <option value="Small">Samll</option>
+            <option value="Mediun">Medium</option>
+            <option value="Large">Large</option>
+          </select>
         </div>
+        <div class="form-group">
+          <input type="checkbox" name="pizza-topping" value="topping">Topping<br>
+          <input type="checkbox" name="pizza-topping" value="topping">Topping<br>
+          <input type="checkbox" name="pizza-topping" value="topping">Topping<br>
+          <input type="checkbox" name="pizza-topping" value="topping">Topping<br>
+          <input type="checkbox" name="pizza-topping" value="topping">Topping<br>
+        </div>
+        <button type="submit" class="btn btn-outline-dark btn-lg btn-block">Order Pizza</button>
       </form>
     </div>
   </body>
