add some css styles to the page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="header">
+        <h1 class="display-1">My Pizza Shop!</h1>
+      </div>
       <form>
         <div class="form-group">
           <select class="form-control form-control" id="pizza-size">
@@ -27,7 +30,7 @@
           <input type="checkbox" name="pizza-topping" value="Bacon">Bacon<br>
           <input type="checkbox" name="pizza-topping" value="Spinach">Spinach<br>
         </div>
-        <button type="submit" class="btn btn-outline-dark btn-lg btn-block">Order Pizza</button>
+        <button type="submit" class="btn btn-outline-warning btn-lg btn-block">Order Pizza</button>
       </form>
       <div id="output-div">
         <div class="row">
